[project]
name = "imagemoderator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "redis>=6.2.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "flake8-docstrings>=1.7.0",
    "flake8-eradicate>=1.5.0",
    "isort>=6.0.1",
    "mypy>=1.16.1",
]

[tool.black]
line-length = 79
force-exclude = '''
/(
    \.venv
)
'''

[tool.isort]
profile = "black"
line_length = 79
skip_gitignore = true
skip_glob = [
    "**/.venv/*",
]

[tool.mypy]
exclude = [
    ".venv",
    "./utils/redis.py",
]
ignore_missing_imports = true
